fixed Flash of unstyled text with visibility:hidden on wf-loading

--- a/app/assets/stylesheets/surfaces/_type-scale.scss
+++ b/app/assets/stylesheets/surfaces/_type-scale.scss
@@ -24,3 +24,7 @@ $h6: .75rem !default;
 .h5 { font-size: $h5 }
 
 .h6 { font-size: $h6 }
+
+/*FUOT*/
+
+.wf-loading {visibility:hidden;}
